--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,13 +1,20 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Quizz ramdomizer</title>
-</head>
+    <head>
+        <title>Quizz generator</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link href="/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/css/styles.css" rel="stylesheet">
+    </head>
 
-<body>
-    <h1>Hello world</h1>
+    <body>
 
-    {% block content %}{% endblock %}
-</body>
+        {{ include('_header.html.twig', [], false) }}
+
+        {% block content %}{% endblock %}
+
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="/js/bootstrap.min.js"></script>
+    </body>
 </html>
