--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,3 +6,7 @@
     background-position: center;
     background-repeat: no-repeat;
 }
+
+.table-bordered td, .table-bordered th {
+    border: 1px solid #888;
+}
