Added custom players name

--- a/templates/game/new.html.twig
+++ b/templates/game/new.html.twig
@@ -24,6 +24,28 @@
                         </div>
 
                         <hr class="mb-4">
+
+                        <div class="row">
+                            <div class="col-lg-6 offset-3">
+                                <div class="form-group row">
+                                    <input type="text" class="form-control" placeholder="Joueur 1" name="player_one">
+                                </div>
+
+                                <div class="form-group row">
+                                    <input type="text" class="form-control" placeholder="Joueur 2" name="player_two">
+                                </div>
+
+                                <div class="form-group row">
+                                    <input type="text" class="form-control" placeholder="Joueur 3" name="player_three">
+                                </div>
+
+                                <div class="form-group row">
+                                    <input type="text" class="form-control" placeholder="Joueur 4" name="player_four">
+                                </div>
+                            </div>
+                        </div>
+
+                        <hr class="mb-4">
                         <button class="btn btn-outline-primary btn-lg w-25" type="submit" name="submit">Démarrer la partie</button>
                     </form>
                 </div>
