--- a/templates/game/play.html.twig
+++ b/templates/game/play.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block content %}
-    <header class="masthead">
+    <section class="masthead">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12 text-center">
@@ -43,5 +43,5 @@
                 </div>
             </div>
         </div>
-    </header>
+    </section>
 {% endblock %}
