--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,10 +1,13 @@
 .masthead {
-    height: 100vh;
-    min-height: 500px;
+    min-height: 100vh;
     background-image: url('/img/home-bg.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    padding-top: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .table-bordered td, .table-bordered th {
