--- a/templates/game/new.html.twig
+++ b/templates/game/new.html.twig
@@ -26,7 +26,20 @@
                         <hr class="mb-4">
 
                         <div class="row">
-                            <div class="col-lg-6 offset-3">
+                            <div class="col-6 offset-3">
+                                <div class="form-group row">
+                                    <label for="nb_questions">Nombre de questions par jeu</label>
+                                    <input type="number" class="form-control" id="nb_questions"
+                                           placeholder="Nombre de questions" name="nb_questions"
+                                           value="5" min="1">
+                                </div>
+                            </div>
+                        </div>
+
+                        <hr class="mb-4">
+
+                        <div class="row">
+                            <div class="col-6 offset-3">
                                 <div class="form-group row">
                                     <input type="text" class="form-control" placeholder="Joueur 1" name="player_one">
                                 </div>
