Added trivial pursuit and refacto

--- a/templates/game/new.html.twig
+++ b/templates/game/new.html.twig
@@ -14,6 +14,11 @@
                         </div>
 
                         <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="tp" name="tp">
+                            <label class="custom-control-label" for="tp">Trivial Pursuit</label>
+                        </div>
+
+                        <div class="custom-control custom-checkbox">
                             <input type="checkbox" class="custom-control-input" id="cc" name="cc" checked>
                             <label class="custom-control-label" for="cc">Combat de coqs</label>
                         </div>
