Added France en 2000 questions and up to 6 players

--- a/templates/game/new.html.twig
+++ b/templates/game/new.html.twig
@@ -28,6 +28,11 @@
                             <label class="custom-control-label" for="sv">Science & Vie</label>
                         </div>
 
+                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="fq" name="fq" checked>
+                            <label class="custom-control-label" for="fq">France en 2000 questions</label>
+                        </div>
+
                         <hr class="mb-4">
 
                         <div class="row">
@@ -59,6 +64,14 @@
 
                                 <div class="form-group row">
                                     <input type="text" class="form-control" placeholder="Joueur 4" name="player_four">
+                                </div>
+
+                                <div class="form-group row">
+                                    <input type="text" class="form-control" placeholder="Joueur 5" name="player_five">
+                                </div>
+
+                                <div class="form-group row">
+                                    <input type="text" class="form-control" placeholder="Joueur 6" name="player_six">
                                 </div>
                             </div>
                         </div>
