Added Apéro énigmes and Soirée énigmes

--- a/templates/game/new.html.twig
+++ b/templates/game/new.html.twig
@@ -33,6 +33,16 @@
                             <label class="custom-control-label" for="fq">France en 2000 questions</label>
                         </div>
 
+                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="ae" name="ae" checked>
+                            <label class="custom-control-label" for="ae">Apéro énigmes <small>130 questions</small></label>
+                        </div>
+
+                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="se" name="se" checked>
+                            <label class="custom-control-label" for="se">Soirée énigmes <small>250 questions</small></label>
+                        </div>
+
                         <hr class="mb-4">
 
                         <div class="row">
