Unchecked Apéro énigmes and Soirée énigmes by default

--- a/templates/game/new.html.twig
+++ b/templates/game/new.html.twig
@@ -34,12 +34,12 @@
                         </div>
 
                         <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="ae" name="ae" checked>
+                            <input type="checkbox" class="custom-control-input" id="ae" name="ae">
                             <label class="custom-control-label" for="ae">Apéro énigmes <small>130 questions</small></label>
                         </div>
 
                         <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="se" name="se" checked>
+                            <input type="checkbox" class="custom-control-input" id="se" name="se">
                             <label class="custom-control-label" for="se">Soirée énigmes <small>250 questions</small></label>
                         </div>
 
